deployment/house.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house
  labels:
    app: house
spec:
  replicas: 1
  selector:
    matchLabels:
      app: house
  template:
    metadata:
      labels:
        app: house
    spec:
      containers:
      - name: house
        image: cqo1154/house:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
