deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkne-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: dkne.169.56.174.139.nip.io
    http:
      paths:
      - path: /house
        pathType: Prefix
        backend:
          service:
            name: house
            port:
              number: 8080
